# freecad-cli

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SETUP_AGENT.md  pyproject.toml
.claude-plugin/: plugin.json
.claude-plugin/agents/: freecad-operator.md
.claude-plugin/skills/freecad-cli/: SKILL.md  execute-code-patterns.md  troubleshoot.md
.githooks/: pre-commit  pre-push
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
addon/FreecadCli/: InitGui.py  rpc_server.py
docs/: architecture.md  product-direction.md
src/freecad_cli/: __main__.py  cli.py  client.py  output.py
tests/: test_cli.py  test_client.py  test_output.py
